コンフィグファイルをjsonからqonに移行